--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tobit-4.github.io/phase-2-project.github.io/",
+  "homepage": "https://tobit-4.github.io/drive-up/",
   "name": "auto-world",
   "private": true,
   "version": "0.0.0",
